Fix wrapping on log in page

--- a/styles.css
+++ b/styles.css
@@ -88,7 +88,7 @@ input[type=checkbox] {
 }
 
 .passphrase-container input {
-  max-width: 130px;
+  max-width: 107px;
 }
 
 .log-in-form {
